--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
@@ -335,7 +334,7 @@
                       <h3 className="font-bold text-gray-700 mb-2 text-sm">Game Rules:</h3>
                       <ul className="text-xs text-gray-600 space-y-1">
                         <li>🎲 Roll the dice and move forward</li>
-                        <li>🪜 Stop 9 → Ladder to Stop 11</li>
+                        <li>⚡️ Stop 9 → Ladder to Stop 11</li>
                         <li>🏆 First team to reach Stop 12 wins!</li>
                         <li>↔️ Use manual controls to adjust team positions if needed</li>
                       </ul>
